Added custom errors and mapping messages
