# docs/swagger.json
@@ -4,6 +4,32 @@
         "contact": {}
     },
     "paths": {
+        "/api/error": {
+            "get": {
+                "description": "Get a example custom error",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "examples"
+                ],
+                "summary": "Get a example custom error",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/pkg.Error"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/examples": {
             "get": {
                 "description": "Get all examples",
@@ -69,6 +95,20 @@
             "properties": {
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "pkg.Error": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
                 }
             }
         }
